--- a/src/main/resources/templates/tourinfo/area.html
+++ b/src/main/resources/templates/tourinfo/area.html
@@ -139,142 +139,144 @@
 </head>
 <body>
 <!-- header-->
-<th:block th:replace="~{fragments/header}"></th:block>
+<!--<th:block th:replace="~{fragments/header}"></th:block>-->
 
 
-<div class="sub-header">
-    <div class="container pt-5 pl-5">
-        <h3 class="display-6 text-white">여행지</h3>
-    </div>
-</div>
+<!--<div class="sub-header">-->
+<!--    <div class="container pt-5 pl-5">-->
+<!--        <h3 class="display-6 text-white">여행지</h3>-->
+<!--    </div>-->
+<!--</div>-->
+
+<div class="d-flex flex-nowrap">
+    <th:block th:replace="~{fragments/sidebar}"></th:block>
+    <div class="container mt-5">
+        <h2 id="test">여행을 떠날 지역을 골라보세요!</h2>
+        <div id="area">
+            <!--           <table border="1" width="70%" align="center"> -->
+            <!--                <c:forEach items="${areaList}" var="area" varStatus="idx">--%>
+                <%--                    <c:if test="${idx.index % 3 == 0}"><tr></c:if>--%>
+                <%--                    <td><a href="../info/city/${area.j_areacode}">${area.j_area_name}</a></td>--%>
+                <%--                    <c:if test="${idx.index % 3 == 2}"></tr></c:if>--%>
+                <%--                </c:forEach>--%>
+            <%--            </table>-->
 
 
-<div class="container mt-5">
-    <h2 id="test">여행을 떠날 지역을 골라보세요!</h2>
-    <div id="area">
-        <!--           <table border="1" width="70%" align="center"> -->
-        <!--                <c:forEach items="${areaList}" var="area" varStatus="idx">--%>
-            <%--                    <c:if test="${idx.index % 3 == 0}"><tr></c:if>--%>
-            <%--                    <td><a href="../info/city/${area.j_areacode}">${area.j_area_name}</a></td>--%>
-            <%--                    <c:if test="${idx.index % 3 == 2}"></tr></c:if>--%>
-            <%--                </c:forEach>--%>
-        <%--            </table>-->
 
+            <div class="main mt-5">
 
+                <div class="main_card b1">
+                    <a href="../info/city/1">
+                        <div class="main_bar">서울</div>
+                    </a>
+                </div>
 
-        <div class="main mt-5">
+                <div class="main_card b2">
+                    <a href="../info/city/6">
+                        <div class="main_bar">부산</div>
+                    </a>
+                </div>
 
-            <div class="main_card b1">
-                <a href="../info/city/1">
-                    <div class="main_bar">서울</div>
-                </a>
+                <div class="main_card b3">
+                    <a href="../info/city/39">
+                        <div class="main_bar">제주</div>
+                    </a>
+                </div>
+
+                <div class="main_card b4">
+                    <a href="../info/city/3">
+                        <div class="main_bar">대전</div>
+                    </a>
+                </div>
+
+                <div class="main_card b5">
+                    <a href="../info/city/4">
+                        <div class="main_bar">대구</div>
+                    </a>
+                </div>
             </div>
 
-            <div class="main_card b2">
-                <a href="../info/city/6">
-                    <div class="main_bar">부산</div>
-                </a>
+            <div class="main mt-3">
+                <div class="main_card b6">
+                    <a href="../info/city/31">
+                        <div class="main_bar">경기도</div>
+                    </a>
+                </div>
+
+                <div class="main_card b7">
+                    <a href="../info/city/5">
+                        <div class="main_bar">광주</div>
+                    </a>
+                </div>
+
+                <div class="main_card b8">
+                    <a href="../info/city/32">
+                        <div class="main_bar">강원도</div>
+                    </a>
+                </div>
+
+                <div class="main_card b9">
+                    <a href="../info/city/7">
+                        <div class="main_bar">울산</div>
+                    </a>
+                </div>
+
+                <div class="main_card b10">
+                    <a href="../info/city/2">
+                        <div class="main_bar">인천</div>
+                    </a>
+                </div>
+
+                <div class="main_card b11">
+                    <a href="../info/city/8">
+                        <div class="main_bar">세종</div>
+                    </a>
+                </div>
             </div>
 
-            <div class="main_card b3">
-                <a href="../info/city/39">
-                    <div class="main_bar">제주</div>
-                </a>
-            </div>
+            <div class="main mt-3">
+                <div class="main_card b12">
+                    <a href="../info/city/33">
+                        <div class="main_bar">충북</div>
+                    </a>
+                </div>
 
-            <div class="main_card b4">
-                <a href="../info/city/3">
-                    <div class="main_bar">대전</div>
-                </a>
-            </div>
+                <div class="main_card b13">
+                    <a href="../info/city/34">
+                        <div class="main_bar">충남</div>
+                    </a>
+                </div>
 
-            <div class="main_card b5">
-                <a href="../info/city/4">
-                    <div class="main_bar">대구</div>
-                </a>
-            </div>
-        </div>
+                <div class="main_card b14">
+                    <a href="../info/city/35">
+                        <div class="main_bar">경북</div>
+                    </a>
+                </div>
 
-        <div class="main mt-3">
-            <div class="main_card b6">
-                <a href="../info/city/31">
-                    <div class="main_bar">경기도</div>
-                </a>
-            </div>
+                <div class="main_card b15">
+                    <a href="../info/city/36">
+                        <div class="main_bar">경남</div>
+                    </a>
+                </div>
 
-            <div class="main_card b7">
-                <a href="../info/city/5">
-                    <div class="main_bar">광주</div>
-                </a>
-            </div>
+                <div class="main_card b16">
+                    <a href="../info/city/37">
+                        <div class="main_bar">전북</div>
+                    </a>
+                </div>
 
-            <div class="main_card b8">
-                <a href="../info/city/32">
-                    <div class="main_bar">강원도</div>
-                </a>
-            </div>
+                <div class="main_card b17">
+                    <a href="../info/city/38">
+                        <div class="main_bar">전남</div>
+                    </a>
+                </div>
 
-            <div class="main_card b9">
-                <a href="../info/city/7">
-                    <div class="main_bar">울산</div>
-                </a>
             </div>
-
-            <div class="main_card b10">
-                <a href="../info/city/2">
-                    <div class="main_bar">인천</div>
-                </a>
-            </div>
-
-            <div class="main_card b11">
-                <a href="../info/city/8">
-                    <div class="main_bar">세종</div>
-                </a>
-            </div>
-        </div>
-
-        <div class="main mt-3">
-            <div class="main_card b12">
-                <a href="../info/city/33">
-                    <div class="main_bar">충북</div>
-                </a>
-            </div>
-
-            <div class="main_card b13">
-                <a href="../info/city/34">
-                    <div class="main_bar">충남</div>
-                </a>
-            </div>
-
-            <div class="main_card b14">
-                <a href="../info/city/35">
-                    <div class="main_bar">경북</div>
-                </a>
-            </div>
-
-            <div class="main_card b15">
-                <a href="../info/city/36">
-                    <div class="main_bar">경남</div>
-                </a>
-            </div>
-
-            <div class="main_card b16">
-                <a href="../info/city/37">
-                    <div class="main_bar">전북</div>
-                </a>
-            </div>
-
-            <div class="main_card b17">
-                <a href="../info/city/38">
-                    <div class="main_bar">전남</div>
-                </a>
-            </div>
-
         </div>
     </div>
 </div>
 <!--footer-->
-<th:block th:replace="~{fragments/footer}"></th:block>
+<!--<th:block th:replace="~{fragments/footer}"></th:block>-->
 
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
